--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -8,6 +8,10 @@ async-std = { version = "1.12.0", features = ["attributes"] }
 bcrypt = "0.14.0"
 bevy = { version = "0.10.1", default-features = false }
 bevy-nest = { git = "https://github.com/its-danny/bevy-nest" }
+bevy_proto = { version = "0.10.0", default-features = false, features = [
+  "auto_name",
+  "ron",
+] }
 chrono = "0.4.24"
 dotenvy = "0.15.7"
 futures-lite = "1.13.0"
