--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -16,6 +16,7 @@ censor = "0.3.0"
 chrono = "0.4.24"
 dotenvy = "0.15.7"
 futures-lite = "1.13.0"
+once_cell = "1.17.1"
 regex = "1.8.1"
 serde = { version = "1.0.163", features = ["derive"] }
 serde_json = "1.0.96"
