--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,6 +31,20 @@ jobs:
   test:
     name: Test Suite
     runs-on: ubuntu-latest
+    env:
+      POSTGRES_PASSWORD: postgres
+    services:
+      postgres:
+        image: postgres:lastest
+        env:
+          POSTGRES_PASSWORD: postgres
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        ports:
+          - 5432:5432
     steps:
       - name: Checkout sources
         uses: actions/checkout@v2
@@ -44,6 +58,8 @@ jobs:
 
       - name: Run cargo test
         uses: actions-rs/cargo@v1
+        env:
+          DATABASE_URL: postgres://postgres:postgres@postgres:${{ job.services.postgres.ports['5432'] }}/postgres
         with:
           command: test
 
