test: set up for running tests that require database access

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout sources
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Install stable toolchain
         uses: actions-rs/toolchain@v1
@@ -31,9 +31,25 @@ jobs:
   test:
     name: Test Suite
     runs-on: ubuntu-latest
+    env:
+      POSTGRES_PASSWORD: postgres
+    services:
+      postgres:
+        image: postgres
+        env:
+          POSTGRES_USER: aureus
+          POSTGRES_PASSWORD: secret
+          POSTGRES_DB: aureus
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        ports:
+          - 5432:5432
     steps:
       - name: Checkout sources
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Install stable toolchain
         uses: actions-rs/toolchain@v1
@@ -44,6 +60,8 @@ jobs:
 
       - name: Run cargo test
         uses: actions-rs/cargo@v1
+        env:
+          DATABASE_URL: postgres://aureus:secret@localhost:5432/aureus
         with:
           command: test
 
@@ -52,7 +70,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout sources
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Install stable toolchain
         uses: actions-rs/toolchain@v1
