docs(readme): add dev section

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,9 @@
+SERVER_PORT=3000
+
+# sqlx
 DATABASE_URL=postgres://aureus:secret@localhost/aureus
 
+# postgres
 POSTGRES_USER=aureus
 POSTGRES_PASSWORD=secret
 POSTGRES_DB=aureus
