--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -14,6 +14,7 @@ censor = "0.3"
 chrono = "0.4"
 dotenvy = "0.15"
 futures-lite = "1.13"
+rand = "0.8"
 regex = "1.8"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
@@ -26,4 +27,5 @@ sqlx = { version = "0.7.0-alpha.3", features = [
 ] }
 
 [dev-dependencies]
+fake = { version = "2.6", features = ["derive"] }
 rusty-hook = "0.11"
