--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.0.0"
 edition = "2021"
 
 [dependencies]
+Inflector = "0.11"
 ascii_table = "4.0"
 async-std = { version = "1.12", features = ["attributes"] }
 bcrypt = "0.14"
@@ -14,6 +15,7 @@ censor = "0.3"
 chrono = "0.4"
 dotenvy = "0.15"
 futures-lite = "1.13"
+indefinite = "0.1"
 rand = "0.8"
 regex = "1.8"
 serde = { version = "1.0", features = ["derive"] }
