--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -27,6 +27,7 @@ sqlx = { version = "0.7.0-alpha.3", features = [
   "runtime-async-std",
   "tls-rustls",
 ] }
+vari = "0.2"
 
 [dev-dependencies]
 fake = { version = "2.6", features = ["derive"] }
