feat(combat): attacking an npc should put you in a combat state

--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -18,6 +18,7 @@ censor = "0.3"
 chrono = "0.4"
 colored = "1.9"
 dotenvy = "0.15"
+enum-as-inner = "0.6"
 futures-lite = "1.13"
 indefinite = "0.1"
 rand = "0.8"
