--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -10,7 +10,7 @@ async-std = { version = "1.12", features = ["attributes"] }
 bcrypt = "0.14"
 bevy = { version = "0.10", default-features = false }
 bevy-nest = "0.1"
-bevy_proto = { version = "0.10", default-features = false, features = [
+bevy_proto = { git = "https://github.com/its-danny/bevy_proto.git", branch = "patch", default-features = false, features = [
   "auto_name",
   "ron",
 ] }
