chore: rename game to kindara

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,10 @@
 SERVER_PORT=3000
 
 # sqlx
-DATABASE_URL=postgres://aureus:secret@localhost/aureus
+DATABASE_URL=postgres://kindara:secret@localhost/kindara
 
 # postgres
-POSTGRES_USER=aureus
+POSTGRES_USER=kindara
 POSTGRES_PASSWORD=secret
-POSTGRES_DB=aureus
+POSTGRES_DB=kindara
 
