--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -23,6 +23,7 @@ futures-lite = "1.13"
 indefinite = "0.1"
 rand = "0.8"
 regex = "1.8"
+ron = "0.8"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 sqlx = { version = "0.7.0-alpha.3", features = [
