--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -14,6 +14,7 @@ bevy_proto = { version = "0.11", default-features = false, features = [
   "auto_name",
   "ron",
 ] }
+caith = "4.2"
 censor = "0.3"
 chrono = "0.4"
 colored = "1.9"
