refactor(combat): extract skill validation

--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -34,6 +34,7 @@ sqlx = { version = "0.7", features = [
   "runtime-async-std",
   "tls-rustls",
 ] }
+thiserror = "1.0.50"
 
 [dev-dependencies]
 fake = { version = "2.6", features = ["derive"] }
