--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -42,3 +42,4 @@ thiserror = "1.0.50"
 fake = { version = "2.6", features = ["derive"] }
 rstest = "0.18.2"
 rusty-hook = "0.11"
+test-log = "0.2.14"
